--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" [routerLink]="['']">酒酒网</a>
+      <a class="navbar-brand" [routerLink]="['']">啾啾网</a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav pull-right">
