--- a/JiuJiuWeb/src/app/HomePage/page/page.component.html
+++ b/JiuJiuWeb/src/app/HomePage/page/page.component.html
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active" >
-      <img class="slide-image" src="assets/images/lunbo1.png" alt=""/>
+      <img class="slide-image" src="assets/images/1.png" alt=""/>
     </div>
     <div class="item">
-      <img class="slide-image" src="assets/images/lunbo2.png" alt=""/>
+      <img class="slide-image" src="assets/images/2.png" alt=""/>
     </div>
     <div class="item">
-      <img class="slide-image" src="assets/images/lunbo3.png" alt=""/>
+      <img class="slide-image" src="assets/images/3.png" alt=""/>
     </div>
   </div>
   <a class="left carousel-control" href="javascript:$('.carousel').carousel('prev')">
@@ -21,7 +21,6 @@
   <a class="right carousel-control" href="javascript:$('.carousel').carousel('next')">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
-
 </div>
 
 <app-block></app-block>
