--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/type-tree/type-tree.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/type-tree/type-tree.component.html
@@ -24,10 +24,7 @@
   }
 </style>
 <body>
-<p>
-
-  typetree page works!
-</p>
+  <img class="col-lg-10 col-md-10" src="../assets/images/typeTree.png">
 </body>
 <script>
   /* Reingold-Tilford Tree */
@@ -61,7 +58,7 @@
     var nested1 = processData(files);
     svg.append("text")
       .attr("id", "version")
-      .text("品酒图")
+      .text("网站信息结构树")
       .attr("x", -diameter * 0.4)
       .attr("y", -diameter * 0.4)
       .style("font-size", "32px");
