--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
@@ -57,7 +57,7 @@
                 <div class="form-group" >
                   <label for="toggle-button" class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;" >是否推荐</label>
                   <div class="toggle-button-wrapper" >
-                    <input type="checkbox" id="toggle-button" [(ngModel)]="data.state" name="switch" >
+                    <input type="checkbox" id="toggle-button" [(ngModel)]="state" name="switch" >
                     <label for="toggle-button" class="button-label"  style="margin-left:30px;">
                       <span class="circle"></span>
                       <span class="text on">ON</span>
