--- a/JiuJiuWeb/src/app/HomePage/block/block.component.html
+++ b/JiuJiuWeb/src/app/HomePage/block/block.component.html
@@ -7,7 +7,7 @@
 
 
       <div class='program-list-bot'>
-        <a class='git'[routerLink]="['/login']">查看详情</a>
+        <a class='git' (click)="hit()">查看详情</a>
       </div>
     </div>
 
