--- a/JiuJiuWeb/src/app/UserWebsite/editpassword/editpassword.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/editpassword/editpassword.component.html
@@ -1,12 +1,12 @@
 <form #formRef="ngForm" role="form" (ngSubmit)="onSubmit(formRef.value)">
 <div>
-  <label for="originpassword" >原密码：</label>
-  <input type="text" ngModel name="origin_password" id="originpassword" autocomplete="off" placeholder="请输入原来的密码."/>
+  <label for="origin_password" >原密码：</label>
+  <input type="text" ngModel name="origin_password" id="origin_password" autocomplete="off" placeholder="请输入原来的密码."/>
 </div>
 
 <div>
-  <label for="newpassword">新密码：</label>
-  <input type="text" ngModel name="new_password" id="newpassword" placeholder="请输入新密码.">
+  <label for="new_password">新密码：</label>
+  <input type="text" ngModel name="new_password" id="new_password" placeholder="请输入新密码.">
 </div>
 <div>
   <button type="submit">保存</button>
