--- a/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
@@ -39,9 +39,7 @@
             <div class="hm-t-body">
               <ul class="hm-t-list hm-t-list-img">
 
-                <li *ngFor="let item of reading" class="hm-t-item hm-t-item-img"><p target="_blank"
-                                                                                    class="hm-t-img-title"
-                                                                                    style="visibility: visible;"><span>{{item.title}}</span></p>
+                <li *ngFor="let item of reading" class="hm-t-item hm-t-item-img"><p class="hm-t-img-title" style="visibility: visible;"><span>{{item.title}}</span></p>
                 </li>
 
               </ul>
