--- a/JiuJiuWeb/src/app/UserWebsite/detail/detail.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/detail/detail.component.html
@@ -8,11 +8,14 @@
 
             <div id="setting-profile" class="setting-wrap setting-profile">
               <div class="form-horizontal">
+
                 <div class="form-group">
                   <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章标题</label>
                   <div class="col-lg-6 col-md-6">
                    {{arts.title}}
+                  </div>
                 </div>
+
                 <div class="form-group">
                   <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章作者</label>
                   <div class="col-lg-6 col-md-6">
