--- a/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
+++ b/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
@@ -2,7 +2,7 @@
 <div class="row justify-content-md-center">
   <div class="col-md-4 col-md-offset-4 " style=" margin-top:50px;">
     <img class="user-avatar" src="assets/images/logo.jpeg" width="150px" />
-    <h1>酒酒网</h1>
+    <h1>啾啾网</h1>
     <form [formGroup]="formModel" (submit)="onSubmit()">
       <div class="form-content">
         <div class="form-group">
