--- a/JiuJiuWeb/src/app/UserWebsite/detail/detail.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/detail/detail.component.html
@@ -9,44 +9,45 @@
             <div id="setting-profile" class="setting-wrap setting-profile">
               <div class="form-horizontal">
                 <div class="form-group">
-                  <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章标题</label>
+                  <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px">文章标题</h4>
                   <div class="col-lg-6 col-md-6">
-                   {{arts.title}}
+                    <p class="text-primary">{{arts.title}}</p>
                 </div>
                 </div>
                 <div class="form-group">
-                  <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章作者</label>
+                  <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px">文章作者</h4>
                   <div class="col-lg-6 col-md-6">
-                    {{arts.author}}
+                    <p class="text-primary">{{arts.author}}</p>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">关键字</label>
+                  <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px">关键字</h4>
                   <div class="col-lg-6 col-md-6">
-                    {{arts.keywords}}
+                    <p class="text-primary">{{arts.keywords}}</p>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章描述</label>
+                  <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px">文章描述</h4>
                   <div class="col-lg-9 col-md-9">
-                   {{arts.desc}}
+                    <p class="text-primary">{{arts.desc}}</p>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">所属栏目</label>
+                  <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px">所属栏目</h4>
                   <div class="col-lg-2 col-md-2">
-                    {{arts.cateid}}
+                    <p class="text-primary">{{arts.cateid}}</p>
                   </div>
                 </div>
                 <div class="form-group" >
-                  <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;" >是否推荐</label>
-                 {{arts.state}}
+                  <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px" >是否推荐</h4>
+                  <div class="col-lg-2 col-md-2">
+                    <p class="text-primary">{{arts.state}}/p>
                   </div>
                 </div>
                 <hr>
                   <div class="form-group">
-                    <label class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;">文章内容</label>
-                    <div class="col-lg-9 col-md-9">
+                    <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -3px">文章内容</h4>
+                    <div class="col-lg-9 col-md-9"> <br/><br/>
                       {{arts.content}}
                     </div>
                   </div>
