--- a/JiuJiuWeb/src/app/HomePage/login/login.component.html
+++ b/JiuJiuWeb/src/app/HomePage/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-md-center">
     <div class="col-md-4 col-md-offset-4 " style=" margin-top:50px;">
       <img src="assets/images/logo.jpeg" width="150px" class="user-avatar" />
-      <h1>酒酒网</h1>
+      <h1>啾啾网</h1>
       <form #formRef="ngForm" role="form" (ngSubmit)="onSubmit(formRef.value)">
         <div class="form-content">
 
