--- a/JiuJiuWeb/src/app/UserWebsite/detail/detail.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/detail/detail.component.html
@@ -41,7 +41,7 @@
                 <div class="form-group" >
                   <h4 class="col-lg-2 col-md-2 control-label" style="margin-left:-30px;margin-top: -8px" >是否推荐</h4>
                   <div class="col-lg-2 col-md-2">
-                    <p class="text-primary">{{arts.state}}/p>
+                    <p class="text-primary">{{recommend}}</p>
                   </div>
                 </div>
                 <hr>
