--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -66,40 +66,40 @@
                     <select id="native_place" [(ngModel)]="user.native_place" name="native_place" id="native_place" class='moco-form-control' hidefocus="true">
                       <option value="0">选择省份</option>
                       <option value="beijing">北京</option>
-                      <option value="2">天津</option>
-                      <option value="3">河北</option>
-                      <option value="4">山西</option>
-                      <option value="5">内蒙古</option>
-                      <option value="6">辽宁</option>
-                      <option value="7">吉林</option>
-                      <option value="8">黑龙江</option>
-                      <option value="9">上海</option>
-                      <option value="10">江苏</option>
-                      <option value="11">浙江</option>
-                      <option value="12">安徽</option>
-                      <option value="13">福建</option>
-                      <option value="14">江西</option>
-                      <option value="15">山东</option>
-                      <option value="16">河南</option>
-                      <option value="17">湖北</option>
-                      <option value="18">湖南</option>
-                      <option value="19">广东</option>
-                      <option value="20">海南</option>
-                      <option value="21">广西</option>
-                      <option value="22">甘肃</option>
-                      <option value="23">陕西</option>
-                      <option value="24">新疆</option>
-                      <option value="25">青海</option>
-                      <option value="26">宁夏</option>
-                      <option value="27">重庆</option>
-                      <option value="28">四川</option>
-                      <option value="29">贵州</option>
-                      <option value="30">云南</option>
-                      <option value="31">西藏</option>
-                      <option value="32">台湾</option>
-                      <option value="33">澳门</option>
-                      <option value="34">香港</option>
-                      <option value="100">其他</option>
+                      <option value="tianjin">天津</option>
+                      <option value="hebei">河北</option>
+                      <option value="shanxi">山西</option>
+                      <option value="neimenggu">内蒙古</option>
+                      <option value="iaoning">辽宁</option>
+                      <option value="jilin">吉林</option>
+                      <option value="heilongjiang">黑龙江</option>
+                      <option value="shanghai">上海</option>
+                      <option value="jiangsu">江苏</option>
+                      <option value="zhejiang">浙江</option>
+                      <option value="anhui">安徽</option>
+                      <option value="fujian">福建</option>
+                      <option value="jiangxi">江西</option>
+                      <option value="shandong">山东</option>
+                      <option value="henan">河南</option>
+                      <option value="hubei">湖北</option>
+                      <option value="hunan">湖南</option>
+                      <option value="guangdong">广东</option>
+                      <option value="hainan">海南</option>
+                      <option value="guangxi">广西</option>
+                      <option value="gansu">甘肃</option>
+                      <option value="shanxi">陕西</option>
+                      <option value="xinjiang">新疆</option>
+                      <option value="qinghai">青海</option>
+                      <option value="ningxia">宁夏</option>
+                      <option value="chongqing">重庆</option>
+                      <option value="sichuang">四川</option>
+                      <option value="guizhou">贵州</option>
+                      <option value="yunnan">云南</option>
+                      <option value="xizang">西藏</option>
+                      <option value="taiwan">台湾</option>
+                      <option value="aomen">澳门</option>
+                      <option value="xianggang">香港</option>
+                      <option value="qita">其他</option>
                     </select>
                     <div class="cb"></div>
                     <p class="rlf-tip-wrap errorHint color-red"></p>
