--- a/JiuJiuWeb/src/app/UserWebsite/editpassword/editpassword.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/editpassword/editpassword.component.html
@@ -1,14 +1,14 @@
-<form #formRef="ngForm" role="form" (ngSubmit)="onSubmit(formRef.value)">
+<form #formRef="ngForm" role="form" (ngSubmit)="onSubmit(formRef.value)" style="margin-top: 30px" align="center">
 <div>
   <label for="origin_password" >原密码：</label>
   <input type="text" ngModel name="origin_password" id="origin_password" autocomplete="off" placeholder="请输入原来的密码."/>
 </div>
 
-<div>
+<div style="margin-top: 10px">
   <label for="new_password">新密码：</label>
   <input type="text" ngModel name="new_password" id="new_password" placeholder="请输入新密码.">
 </div>
-<div>
+<div style="margin-top:10px">
   <button type="submit">保存</button>
 </div>
 </form>
