--- a/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
+++ b/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
@@ -16,12 +16,17 @@
     <img class="col-lg-1 col-md-1" src="../assets/images/friends.png">
     <h4 class="col-lg-2 col-md-2">团队介绍</h4>
   </div>
-  <div class="contact-list" style="margin-left: 100px;">
-    <p class="inline-p">团队成员：</p>
+  <div class="row">
+    <img src="../assets/images/our1.jpg">
+    <img src="../assets/images/our2.jpg">
+  </div>
+  <div class="row">
+    <img src="../assets/images/our3.jpg">
+    <img src="../assets/images/our4.jpg">
   </div>
 </div>
 
-<div class="contact-wrap">
+<div class="contact-wrap" style="margin-top: 20px">
   <div class="row">
     <img class="col-lg-1 col-md-1"  src="../assets/images/contact.png">
     <h4 class="col-lg-2 col-md-2">联系我们</h4>
