--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -24,6 +24,7 @@
             <li><a *ngIf="checkadmin()" [routerLink]="['/editpw']">修改密码</a> </li>
             <li><a *ngIf="checkadmin()" [routerLink]="['/user']">用户首页</a> </li>
             <li><a *ngIf="!checkadmin()" [routerLink]="['/admin']">管理系统</a> </li>
+            <li><a *ngIf="!checkadmin()" [routerLink]="['/user']">文章浏览</a></li>
             <li><a (click)="exit()">退出登录</a></li>
           </ul>
         </li>
